--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+bcrypt==4.0.1
 blinker==1.6.2
 click==8.1.7
 flask==2.3.3
+Flask-Bcrypt==1.0.1
 flask-sqlalchemy==3.0.5
 greenlet==2.0.2
 importlib-metadata==6.8.0
