--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 psycopg2-binary==2.9.7
+PyJWT==2.8.0
 python-dotenv==1.0.0
 SQLAlchemy==2.0.20
 typing-extensions==4.7.1
+validators==0.21.2
 werkzeug==2.3.7
 zipp==3.16.2
