--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+Babel==2.12.1
 bcrypt==4.0.1
 blinker==1.6.2
 click==8.1.7
 flask==2.3.3
+flask-babel==3.1.0
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.5.2
 Flask-Mail==0.9.1
@@ -14,6 +16,7 @@ MarkupSafe==2.1.3
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
 python-dotenv==1.0.0
+pytz==2023.3
 SQLAlchemy==2.0.20
 typing-extensions==4.7.1
 validators==0.21.2
