--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 Babel==2.12.1
 bcrypt==4.0.1
 blinker==1.6.2
+certifi==2023.7.22
 click==8.1.7
+elastic-transport==8.4.0
+elasticsearch==8.9.0
 flask==2.3.3
 flask-babel==3.1.0
 Flask-Bcrypt==1.0.1
@@ -19,6 +22,7 @@ python-dotenv==1.0.0
 pytz==2023.3
 SQLAlchemy==2.0.20
 typing-extensions==4.7.1
+urllib3==1.26.16
 validators==0.21.2
 werkzeug==2.3.7
 zipp==3.16.2
