--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+amqp==5.1.1
+async-timeout==4.0.3
 Babel==2.12.1
+backports.zoneinfo==0.2.1
 bcrypt==4.0.1
+billiard==4.1.0
 blinker==1.6.2
+celery==5.3.4
 certifi==2023.7.22
 click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
 elastic-transport==8.4.0
 elasticsearch==8.9.0
 flask==2.3.3
@@ -15,14 +23,22 @@ greenlet==2.0.2
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kombu==5.3.2
 MarkupSafe==2.1.3
+prompt-toolkit==3.0.39
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
+redis==5.0.0
+six==1.16.0
 SQLAlchemy==2.0.20
 typing-extensions==4.7.1
+tzdata==2023.3
 urllib3==1.26.16
 validators==0.21.2
+vine==5.0.0
+wcwidth==0.2.6
 werkzeug==2.3.7
 zipp==3.16.2
