--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ elasticsearch==8.9.0
 flask==2.3.3
 flask-babel==3.1.0
 Flask-Bcrypt==1.0.1
+Flask-CeleryExt==0.5.0
 Flask-JWT-Extended==4.5.2
 Flask-Mail==0.9.1
 flask-sqlalchemy==3.0.5
