--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.2
 amqp==5.1.1
 async-timeout==4.0.3
 Babel==2.12.1
@@ -22,9 +23,11 @@ Flask-Mail==0.9.1
 flask-sqlalchemy==3.0.5
 greenlet==2.0.2
 importlib-metadata==6.8.0
+importlib-resources==6.4.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 kombu==5.3.2
+Mako==1.3.5
 MarkupSafe==2.1.3
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.7
