--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ Jinja2==3.1.2
 kombu==5.3.2
 Mako==1.3.5
 MarkupSafe==2.1.3
+marshmallow==3.22.0
+packaging==24.1
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.7
 PyJWT==2.8.0
