--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Flask-Bcrypt==1.0.1
 Flask-CeleryExt==0.5.0
 Flask-JWT-Extended==4.5.2
 Flask-Mail==0.9.1
+flask-marshmallow==1.2.1
 Flask-Migrate==4.0.7
 flask-sqlalchemy==3.0.5
 greenlet==2.0.2
